fixed users api  and update swagger
